--- a/Blazor.UI/Shared/NavMenu.razor
+++ b/Blazor.UI/Shared/NavMenu.razor
@@ -24,10 +24,18 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="test/">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Test
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
 @code {
+
+    
     private bool collapseNavMenu = true;
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
