--- a/Blazor.UI/Pages/Test/Index.razor
+++ b/Blazor.UI/Pages/Test/Index.razor
@@ -9,7 +9,7 @@
             <option>Select Noun</option>
             @foreach(var item in Nouns)
             {
-                <option value="@item.Id">@item.BaseForm</option>
+                <option value="@item.Id">@item.SingularForm</option>
             }
         </InputSelect>
     </div>
