Change Verb BaseForm to Infinitive and use PresentTense for listing

--- a/Blazor.UI/Pages/Test/Index.razor
+++ b/Blazor.UI/Pages/Test/Index.razor
@@ -53,7 +53,7 @@
             <option>Select verb</option>
             @foreach (var item in Verbs)
             {
-                <option value="@item.Id">@item.BaseForm</option>
+                <option value="@item.Id">@item.PresentTense</option>
             }
         </InputSelect>
     </div>
