--- a/Blazor.UI/Pages/Index.razor
+++ b/Blazor.UI/Pages/Index.razor
@@ -2,8 +2,8 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Träna grammatik</h1>
 
-Welcome to your new app.
+Välkommen!
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
