--- a/Blazor.UI/Pages/Test/Index.razor
+++ b/Blazor.UI/Pages/Test/Index.razor
@@ -2,10 +2,10 @@
 
 <h3>Skapa ett enkelt påstående eller fråga</h3>
 
-<EditForm Model="@CreateSentenceInput" OnValidSubmit="HandleSubmit">
+<EditForm Model="@DisplaySentence" OnValidSubmit="HandleSubmit">
     <div class="form-group">
         <label for="noun">Välj ditt subjekt</label>
-        <InputSelect class="form-control" id="noun" @bind-Value="CreateSentenceInput.SubjectNounInput.Id">
+        <InputSelect class="form-control" id="noun" @bind-Value="DisplaySentence.SubjectId">
             <option>Vem eller vad agerar?</option>
             @foreach (var item in Nouns)
             {
@@ -15,21 +15,21 @@
     </div>
     <div class="form-group">
         <label for="definiteness">Välj bestämdhet</label>
-        <InputSelect class="form-control" id="definiteness" @bind-Value="CreateSentenceInput.SubjectNounInput.Definiteness">
+        <InputSelect class="form-control" id="definiteness" @bind-Value="DisplaySentence.SubjectDefiniteness">
             <option value="definite">bestämd</option>
             <option value="indefinite">obestämd</option>
         </InputSelect>
     </div>
     <div class="form-group">
         <label for="grammaticalNumber">Välj antal</label>
-        <InputSelect class="form-control" id="grammaticalNumber" @bind-Value="CreateSentenceInput.SubjectNounInput.GrammaticalNumber">
+        <InputSelect class="form-control" id="grammaticalNumber" @bind-Value="DisplaySentence.SubjectGrammaticalNumber">
             <option value="singular">singular</option>
             <option value="plural">plural</option>
         </InputSelect>
     </div>
     <div class="form-group">
         <label for="tense">Välj tempus</label>
-        <InputSelect class="form-control" id="tense" @bind-Value="CreateSentenceInput.Tense">
+        <InputSelect class="form-control" id="tense" @bind-Value="DisplaySentence.Tense">
             <option value="present">presens</option>
             <option value="future">futurum</option>
             <option value="perfect">perfekt</option>
@@ -38,14 +38,14 @@
     </div>
     <div class="form-group">
         <label for="statementOrQuestion">Välj struktur: påstående eller fråga</label>
-        <InputSelect class="form-control" id="statementOrQuestion" @bind-Value="CreateSentenceInput.StatementOrQuestion">
+        <InputSelect class="form-control" id="statementOrQuestion" @bind-Value="DisplaySentence.StatementOrQuestion">
             <option value="statement">påstående</option>
             <option value="question">fråga</option>
         </InputSelect>
     </div>
     <div class="form-group mb-2">
         <label for="verb">Välj predikat</label>
-        <InputSelect class="form-control" id="verb" @bind-Value="CreateSentenceInput.Predicate.Id">
+        <InputSelect class="form-control" id="verb" @bind-Value="DisplaySentence.PredicateId">
             <option>Vad görs eller händer?</option>
             @foreach (var item in Verbs)
             {
@@ -58,9 +58,9 @@
 
 <div class="mt-5">
     @{
-        if (!string.IsNullOrEmpty(DisplayCreatedSentence.DisplaySentence))
+        if (!string.IsNullOrEmpty(DisplaySentence.DisplaySentence))
         {
-            <p>@DisplayCreatedSentence.DisplaySentence</p>
+            <p>@DisplaySentence.DisplaySentence</p>
         }
     }
 </div>
