--- a/Blazor.UI/Shared/NavMenu.razor
+++ b/Blazor.UI/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Grundläggande mening
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="verbs/">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Hantera verb
+            </NavLink>
+        </div>
 
     </nav>
 </div>
